force-app/main/default/objects/Customercenter_CallData__c/Customercenter_CallData__c.object-meta.xml
<CustomObject>
    <label>カスタマーセンター_コールデータ_old</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{00000}</displayFormat>
        <label>コール連番</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>