force-app/main/default/objects/Customercenter_CallData__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>カスタマーセンター_コールデータ</relationshipLabel>
    <relationshipName>AccountCustomer_old</relationshipName>
    <type>Lookup</type>
</CustomField>