force-app/main/default/objects/Customercenter_CallData__c/fields/ActualOwner__c.field-meta.xml
<CustomField>
    <fullName>ActualOwner__c</fullName>
    <label>実態上の所有者(所有権留保の場合使用者)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>