force-app/main/default/objects/Customercenter_CallData__c/fields/AgencyName__c.field-meta.xml
<CustomField>
    <fullName>AgencyName__c</fullName>
    <label>代理店名</label>
    <length>20</length>
    <type>Text</type>
</CustomField>