force-app/main/default/objects/Customercenter_CallData__c/fields/AlertDate__c.field-meta.xml
<CustomField>
    <fullName>AlertDate__c</fullName>
    <label>アラート日時</label>
    <type>DateTime</type>
</CustomField>