force-app/main/default/objects/Customercenter_CallData__c/fields/AnswerDate__c.field-meta.xml
<CustomField>
    <fullName>AnswerDate__c</fullName>
    <label>回答日時</label>
    <type>DateTime</type>
</CustomField>