force-app/main/default/objects/Customercenter_CallData__c/fields/ApplicationCarModel__c.field-meta.xml
<CustomField>
    <fullName>ApplicationCarModel__c</fullName>
    <label>用途車種</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自普乗</fullName>
                <default>true</default>
                <label>自普乗</label>
            </value>
            <value>
                <fullName>自小乗</fullName>
            </value>
            <value>
                <fullName>自軽四乗</fullName>
            </value>
            <value>
                <fullName>自普貨</fullName>
            </value>
            <value>
                <fullName>自小貨</fullName>
            </value>
            <value>
                <fullName>自軽四貨</fullName>
            </value>
            <value>
                <fullName>キャンピング</fullName>
            </value>
            <value>
                <fullName>特殊</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>