force-app/main/default/objects/Customercenter_CallData__c/fields/ApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDate__c</fullName>
    <label>申込日</label>
    <type>Date</type>
</CustomField>