force-app/main/default/objects/Customercenter_CallData__c/fields/ApplicationRoute__c.field-meta.xml
<CustomField>
    <fullName>ApplicationRoute__c</fullName>
    <label>申込経路</label>
    <length>50</length>
    <type>Text</type>
</CustomField>