force-app/main/default/objects/Customercenter_CallData__c/fields/ArrivalDate_Latest__c.field-meta.xml
<CustomField>
    <fullName>ArrivalDate_Latest__c</fullName>
    <label>到着日（最新）</label>
    <type>Date</type>
</CustomField>