force-app/main/default/objects/Customercenter_CallData__c/fields/AutomobileLiabilityInsuranceAuthorizatio__c.field-meta.xml
<CustomField>
    <fullName>AutomobileLiabilityInsuranceAuthorizatio__c</fullName>
    <label>自動車損害賠償責任保険承認請求書綴_冊数</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>