force-app/main/default/objects/Customercenter_CallData__c/fields/BasisForSetting__c.field-meta.xml
<CustomField>
    <fullName>BasisForSetting__c</fullName>
    <label>設定根拠</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未選択</fullName>
                <default>true</default>
                <label>未選択</label>
            </value>
            <value>
                <fullName>車価表</fullName>
            </value>
            <value>
                <fullName>RedBook</fullName>
            </value>
            <value>
                <fullName>SV</fullName>
            </value>
            <value>
                <fullName>支援スタッフ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>