force-app/main/default/objects/Customercenter_CallData__c/fields/BirthdayNewSubscriber__c.field-meta.xml
<CustomField>
    <fullName>BirthdayNewSubscriber__c</fullName>
    <label>（新）記名被保険者生年月日</label>
    <type>Date</type>
</CustomField>