force-app/main/default/objects/Customercenter_CallData__c/fields/BlowingOut__c.field-meta.xml
<CustomField>
    <fullName>BlowingOut__c</fullName>
    <label>はき出しorすい込み車両の元証券番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>