force-app/main/default/objects/Customercenter_CallData__c/fields/Caller_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>Caller_PhoneNumber__c</fullName>
    <label>相手先電話番号</label>
    <type>Phone</type>
</CustomField>