force-app/main/default/objects/Customercenter_CallData__c/fields/CallerName__c.field-meta.xml
<CustomField>
    <fullName>CallerName__c</fullName>
    <label>入電者名</label>
    <length>10</length>
    <type>Text</type>
</CustomField>