force-app/main/default/objects/Customercenter_CallData__c/fields/CallNumber__c.field-meta.xml
<CustomField>
    <fullName>CallNumber__c</fullName>
    <label>コール番号</label>
    <type>Phone</type>
</CustomField>