force-app/main/default/objects/Customercenter_CallData__c/fields/CallNumberResponseStatus__c.field-meta.xml
<CustomField>
    <fullName>CallNumberResponseStatus__c</fullName>
    <label>コール番号対応ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ステータス1</fullName>
            </value>
            <value>
                <fullName>ステータス2</fullName>
            </value>
            <value>
                <fullName>ステータス3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>