force-app/main/default/objects/Customercenter_CallData__c/fields/Cancellation_Addressee_PersonInCharge__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Addressee_PersonInCharge__c</fullName>
    <label>解約完了_宛名・担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>