force-app/main/default/objects/Customercenter_CallData__c/fields/Cancellation_Date_Of_Date_Of_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date_Of_Date_Of_Receipt__c</fullName>
    <label>解約書類到着日</label>
    <type>Date</type>
</CustomField>