force-app/main/default/objects/Customercenter_CallData__c/fields/Cancellation_Initiated_Initiated_Initiat__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Initiated_Initiated_Initiat__c</fullName>
    <label>解約完了_着信電話番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>