force-app/main/default/objects/Customercenter_CallData__c/fields/CancellationCompleted_BusinessContact__c.field-meta.xml
<CustomField>
    <fullName>CancellationCompleted_BusinessContact__c</fullName>
    <label>解約完了_業務連絡</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>