force-app/main/default/objects/Customercenter_CallData__c/fields/CancellationCompletion_Address__c.field-meta.xml
<CustomField>
    <fullName>CancellationCompletion_Address__c</fullName>
    <label>解約完了_送付先住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>