force-app/main/default/objects/Customercenter_CallData__c/fields/CancellationCompletion_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>CancellationCompletion_PostalCode__c</fullName>
    <label>解約完了_送付先郵便番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>