force-app/main/default/objects/Customercenter_CallData__c/fields/CarInspectionCertificate__c.field-meta.xml
<CustomField>
    <fullName>CarInspectionCertificate__c</fullName>
    <label>車検証一筆</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未選択</fullName>
                <default>true</default>
                <label>未選択</label>
            </value>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>