force-app/main/default/objects/Customercenter_CallData__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CategoryList</valueSetName>
    </valueSet>
</CustomField>