force-app/main/default/objects/Customercenter_CallData__c/fields/ChangeOfAddress_ItemNo480_No__c.field-meta.xml
<CustomField>
    <fullName>ChangeOfAddress_ItemNo480_No__c</fullName>
    <defaultValue>false</defaultValue>
    <label>所在地変更有無（項番480）_無</label>
    <type>Checkbox</type>
</CustomField>