force-app/main/default/objects/Customercenter_CallData__c/fields/ChangeOfAddress_No480_Yes__c.field-meta.xml
<CustomField>
    <fullName>ChangeOfAddress_No480_Yes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>所在地変更有無（項番480）_有</label>
    <type>Checkbox</type>
</CustomField>