force-app/main/default/objects/Customercenter_CallData__c/fields/ChangeOfPolicyholderSaddres_16__c.field-meta.xml
<CustomField>
    <fullName>ChangeOfPolicyholderSaddres_16__c</fullName>
    <defaultValue>false</defaultValue>
    <label>16（契約者住所変更）</label>
    <type>Checkbox</type>
</CustomField>