force-app/main/default/objects/Customercenter_CallData__c/fields/ChangeOfTelephoneNumber_86__c.field-meta.xml
<CustomField>
    <fullName>ChangeOfTelephoneNumber_86__c</fullName>
    <defaultValue>false</defaultValue>
    <label>86（電話番号変更）</label>
    <type>Checkbox</type>
</CustomField>