force-app/main/default/objects/Customercenter_CallData__c/fields/CloseDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>CloseDateAndTime__c</fullName>
    <label>クローズ日時</label>
    <type>DateTime</type>
</CustomField>