force-app/main/default/objects/Customercenter_CallData__c/fields/CommencementOfInsurance__c.field-meta.xml
<CustomField>
    <fullName>CommencementOfInsurance__c</fullName>
    <label>保険始期</label>
    <type>Date</type>
</CustomField>