force-app/main/default/objects/Customercenter_CallData__c/fields/CompletionNoticeMailingAddress__c.field-meta.xml
<CustomField>
    <fullName>CompletionNoticeMailingAddress__c</fullName>
    <label>完了通知送付先</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bank_transfer_or_mailing_address</valueSetName>
    </valueSet>
</CustomField>