force-app/main/default/objects/Customercenter_CallData__c/fields/ConfirmationOfPayee__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationOfPayee__c</fullName>
    <label>振込先確認</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bank_transfer_or_mailing_address</valueSetName>
    </valueSet>
</CustomField>