force-app/main/default/objects/Customercenter_CallData__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>カスタマーセンター_コールデータ</relationshipLabel>
    <relationshipName>ContactCustomer_old</relationshipName>
    <type>Lookup</type>
</CustomField>