force-app/main/default/objects/Customercenter_CallData__c/fields/Contact_Cancellation_File_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Cancellation_File_Number__c</fullName>
    <label>連絡事項_解約ファイル番号</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>