force-app/main/default/objects/Customercenter_CallData__c/fields/Contact_Date_Of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Contact_Date_Of_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>連絡事項_着金日</label>
    <type>Checkbox</type>
</CustomField>