force-app/main/default/objects/Customercenter_CallData__c/fields/Contact_Date_Of_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Contact_Date_Of_Receipt__c</fullName>
    <label>連絡事項_着金日付</label>
    <type>Date</type>
</CustomField>