force-app/main/default/objects/Customercenter_CallData__c/fields/Contact_InformationOf_0Yen_RefundForInco__c.field-meta.xml
<CustomField>
    <fullName>Contact_InformationOf_0Yen_RefundForInco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>連絡事項_着解約返戻金「0円」案内</label>
    <type>Checkbox</type>
</CustomField>