force-app/main/default/objects/Customercenter_CallData__c/fields/Contact_Other_Column__c.field-meta.xml
<CustomField>
    <fullName>Contact_Other_Column__c</fullName>
    <label>連絡事項_その他_欄</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>