force-app/main/default/objects/Customercenter_CallData__c/fields/Contact_Others__c.field-meta.xml
<CustomField>
    <fullName>Contact_Others__c</fullName>
    <defaultValue>false</defaultValue>
    <label>連絡事項_その他</label>
    <type>Checkbox</type>
</CustomField>