force-app/main/default/objects/Customercenter_CallData__c/fields/ContactInformation__c.field-meta.xml
<CustomField>
    <fullName>ContactInformation__c</fullName>
    <label>連絡事項</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>