force-app/main/default/objects/Customercenter_CallData__c/fields/Continuation_DateRecorded__c.field-meta.xml
<CustomField>
    <fullName>Continuation_DateRecorded__c</fullName>
    <label>自継停止＿計上日</label>
    <type>Date</type>
</CustomField>