force-app/main/default/objects/Customercenter_CallData__c/fields/Continuation_Type__c.field-meta.xml
<CustomField>
    <fullName>Continuation_Type__c</fullName>
    <label>自継停止_型</label>
    <length>3</length>
    <type>Text</type>
</CustomField>