force-app/main/default/objects/Customercenter_CallData__c/fields/ContinuedResults__c.field-meta.xml
<CustomField>
    <fullName>ContinuedResults__c</fullName>
    <label>継続結果</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>良好</fullName>
            </value>
            <value>
                <fullName>不満</fullName>
            </value>
            <value>
                <fullName>未回答</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>