force-app/main/default/objects/Customercenter_CallData__c/fields/ContractorName__c.field-meta.xml
<CustomField>
    <fullName>ContractorName__c</fullName>
    <label>契約者名</label>
    <length>10</length>
    <type>Text</type>
</CustomField>