force-app/main/default/objects/Customercenter_CallData__c/fields/ConversationPartner_Group__c.field-meta.xml
<CustomField>
    <fullName>ConversationPartner_Group__c</fullName>
    <label>会話相手グループ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>個人顧客</fullName>
            </value>
            <value>
                <fullName>法人顧客</fullName>
            </value>
            <value>
                <fullName>予備1</fullName>
            </value>
            <value>
                <fullName>予備2</fullName>
            </value>
            <value>
                <fullName>予備3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>