force-app/main/default/objects/Customercenter_CallData__c/fields/counterparty_Kana__c.field-meta.xml
<CustomField>
    <fullName>counterparty_Kana__c</fullName>
    <label>相手先カナ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>