force-app/main/default/objects/Customercenter_CallData__c/fields/CurrentPerson__c.field-meta.xml
<CustomField>
    <fullName>CurrentPerson__c</fullName>
    <label>現在担当者</label>
    <length>20</length>
    <type>Text</type>
</CustomField>