force-app/main/default/objects/Customercenter_CallData__c/fields/DateIssue__c.field-meta.xml
<CustomField>
    <fullName>DateIssue__c</fullName>
    <label>交付年月日</label>
    <type>Date</type>
</CustomField>