force-app/main/default/objects/Customercenter_CallData__c/fields/DeathCancellation__c.field-meta.xml
<CustomField>
    <fullName>DeathCancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>死亡解約</label>
    <type>Checkbox</type>
</CustomField>