force-app/main/default/objects/Customercenter_CallData__c/fields/Deductible_To__c.field-meta.xml
<CustomField>
    <fullName>Deductible_To__c</fullName>
    <label>免責金額（万円）（～まで）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>