force-app/main/default/objects/Customercenter_CallData__c/fields/Deficiency__c.field-meta.xml
<CustomField>
    <fullName>Deficiency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>不備</label>
    <type>Checkbox</type>
</CustomField>