force-app/main/default/objects/Customercenter_CallData__c/fields/DeficiencyDate_Latest__c.field-meta.xml
<CustomField>
    <fullName>DeficiencyDate_Latest__c</fullName>
    <label>不備発生日（最新）</label>
    <type>Date</type>
</CustomField>