force-app/main/default/objects/Customercenter_CallData__c/fields/DeficiencyFollow_UpDate_Latest__c.field-meta.xml
<CustomField>
    <fullName>DeficiencyFollow_UpDate_Latest__c</fullName>
    <label>不備フォロー日（最新）</label>
    <type>Date</type>
</CustomField>