force-app/main/default/objects/Customercenter_CallData__c/fields/DeficiencyFollow_UpResult__c.field-meta.xml
<CustomField>
    <fullName>DeficiencyFollow_UpResult__c</fullName>
    <label>不備フォロー結果</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FollowResultList</valueSetName>
    </valueSet>
</CustomField>