force-app/main/default/objects/Customercenter_CallData__c/fields/DemandNoticeSender_Contact__c.field-meta.xml
<CustomField>
    <fullName>DemandNoticeSender_Contact__c</fullName>
    <label>督促通知送付先_連絡事項</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>