force-app/main/default/objects/Customercenter_CallData__c/fields/DetailsOfReasonsForNotContinuing__c.field-meta.xml
<CustomField>
    <fullName>DetailsOfReasonsForNotContinuing__c</fullName>
    <label>未継続理由詳細</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>料金不満</fullName>
            </value>
            <value>
                <fullName>自動車売却</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>