force-app/main/default/objects/Customercenter_CallData__c/fields/Document_Shipping_Address_and_Apartment__c.field-meta.xml
<CustomField>
    <fullName>Document_Shipping_Address_and_Apartment__c</fullName>
    <label>書類発送_送付先番地・マンション</label>
    <length>255</length>
    <type>Text</type>
</CustomField>