force-app/main/default/objects/Customercenter_CallData__c/fields/Documentation_Incomplete_Response_Detail__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Incomplete_Response_Detail__c</fullName>
    <label>書類不備_回答内容</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>