force-app/main/default/objects/Customercenter_CallData__c/fields/DocumentDemand_ConversationPartner__c.field-meta.xml
<CustomField>
    <fullName>DocumentDemand_ConversationPartner__c</fullName>
    <label>書類督促_会話相手</label>
    <length>255</length>
    <type>Text</type>
</CustomField>