force-app/main/default/objects/Customercenter_CallData__c/fields/DocumentDemand_Inbound_Person__c.field-meta.xml
<CustomField>
    <fullName>DocumentDemand_Inbound_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>書類督促_入電_担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DocumentDemand_Inbound_Person_old</relationshipName>
    <type>Lookup</type>
</CustomField>