force-app/main/default/objects/Customercenter_CallData__c/fields/DocumentDemand_InboundPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentDemand_InboundPhoneNumber__c</fullName>
    <label>書類督促_着信電話番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>