force-app/main/default/objects/Customercenter_CallData__c/fields/DocumentDemand_ResponseDetails__c.field-meta.xml
<CustomField>
    <fullName>DocumentDemand_ResponseDetails__c</fullName>
    <label>書類督促_回答内容</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>