force-app/main/default/objects/Customercenter_CallData__c/fields/DocumentDispatch_BusinessContact__c.field-meta.xml
<CustomField>
    <fullName>DocumentDispatch_BusinessContact__c</fullName>
    <label>書類発送_入電_業務連絡</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>