force-app/main/default/objects/Customercenter_CallData__c/fields/DocumentDispatch_ConversationPartner__c.field-meta.xml
<CustomField>
    <fullName>DocumentDispatch_ConversationPartner__c</fullName>
    <label>書類発送_会話相手</label>
    <length>255</length>
    <type>Text</type>
</CustomField>