force-app/main/default/objects/Customercenter_CallData__c/fields/DocumentDispatch_IncomingCall_PersonInCh__c.field-meta.xml
<CustomField>
    <fullName>DocumentDispatch_IncomingCall_PersonInCh__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>書類発送_入電_担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DocumentDispatch_IncomingCall_old</relationshipName>
    <type>Lookup</type>
</CustomField>